# TER

./: .env.example  .gitignore  .npmignore  .ter-graph.json  .ter.json  ANNOUNCEMENT_QUICK_REF.md  DEV.md  GITHUB_RELEASE_v1.0.0-rc1.md  PHASE2_COMPLETE.md  PRODUCT_MEMO.md  RC1_CHECKLIST.md  RC1_EARLY_ADOPTER_OUTREACH.md  RC1_FEEDBACK_TRIAGE.md  RC1_RELEASE_ACTION_PLAN.md  RC1_RELEASE_SUMMARY.md  RC1_STATUS_REPORT.md  README.md  REFERENCE_DEPLOYMENT.md  RELEASE_NOTES_v1.0.0-rc1.md  RELEASE_NOTES_v1.0.0-rc2.md  SESSION_SUMMARY.md  V1_SCOPE.md  jest.config.js  package-lock.json  package.json
.github/workflows/: ter-validate.yml
benchmarks/: benchmark.js
docs/: CHECKLIST.md  GOLDEN_PATH.md  README.md  TER_SPEC_v1.md  VISION.md  WHY_ENV_VARS_ARE_BROKEN.md
go/: benchmarks_test.go  go.mod
java/: pom.xml
python/: benchmarks.py  setup.py
ruby/: Gemfile  README.md  ter.gemspec
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/adapters/: dotenv.rs  mod.rs
rust/src/core/: mod.rs  schema.rs  types.rs  validation.rs
rust/src/runtime/: environment.rs  mod.rs  resolver.rs
rust/tests/: dotenv_test.rs  types_test.rs
src/: index.ts
templates/: README.md  aws.json  express.json  fastapi.json  gcp.json  mongodb.json  nextjs.json  postgresql.json
tests/: basic.test.ts  ci-cd.test.ts  diagnostics.test.ts  dotenv-expansion.test.ts  dotenv-multiline.test.ts  dotenv.test.ts  hot-reload.test.ts  inheritance.test.ts  json-schema.test.ts  mcp.test.ts  plugins.test.ts  secrets.test.ts  template-registry.test.ts  test_validators.py  validators.test.ts  watcher.test.ts
(+119 files in other folders)
