[package]
name = "ter"
version = "0.1.0"
edition = "2021"
authors = ["TER Contributors"]
license = "MIT"
description = "Typed Environment Runtime - Type-safe configuration management"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[test]]
name = "types_test"
path = "tests/types_test.rs"

[[test]]
name = "schema_test"
path = "tests/schema_test.rs"

[[test]]
name = "resolver_test"
path = "tests/resolver_test.rs"

[[test]]
name = "environment_test"
path = "tests/environment_test.rs"

[[test]]
name = "dotenv_test"
path = "tests/dotenv_test.rs"
